crates/ferrotype/tests/compile_fail/empty_enum.stderr
error: Cannot derive TypeScript for empty enum
 --> tests/compile_fail/empty_enum.rs:5:10
  |
5 | #[derive(TS)]
  |          ^^
  |
  = note: this error originates in the derive macro `TS` (in Nightly builds, run with -Z macro-backtrace for more info)
